fix: disabled transitions. Added transparent screen to contrast with list of books

--- a/src/Shelf.css
+++ b/src/Shelf.css
@@ -67,7 +67,7 @@
 
 .navbar {
   position: fixed;
-  background-color: #242424;
+  /*background-color: #242424;*/
   top:2vh;
   left:0;
   width: 100%;
@@ -135,7 +135,8 @@
 
 .hidden {
   opacity: 0;
-  z-index: -999;
+  /*z-index: -999;*/
+  visibility: hidden;
   /*transition: opacity 0.5s ease, visibility 0.5s ease;*/
 }
 
@@ -150,3 +151,17 @@
   /*display: flex;*/
   box-sizing: content-box;
 }
+
+.background-panel {
+  /*background-color:green;*/
+  background-color:#242424;
+  /*filter:opacity(0.9) blur(5px);*/
+  height: 37vh;
+  position:fixed;
+  top:0;
+  right:0;
+  width:100%;
+  box-sizing: content-box;
+  filter: blur(11px) opacity(0.7);
+}
+
